--- a/script/analysis/ck-caffe-nvidia-gtx1080.ipynb
+++ b/script/analysis/ck-caffe-nvidia-gtx1080.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "# [cknowledge.org/ai](https://cknowledge.org/ai): Crowdsourcing benchmarking and optimisation of AI"
+    "# [cknowledge.org/ai](http://cknowledge.org/ai): Crowdsourcing benchmarking and optimisation of AI"
    ]
   },
   {
@@ -2494,7 +2494,7 @@
    },
    "source": [
     "<a id=\"cknowledge_ai\"></a>\n",
-    "## [cknowledge.org/ai](https://cknowledge.org/ai): Crowdsourcing benchmarking and optimisation of AI"
+    "## [cknowledge.org/ai](http://cknowledge.org/ai): Crowdsourcing benchmarking and optimisation of AI"
    ]
   },
   {
